tests/integration/tests/macros/ui/fail/unique_field_ref_cannot_be_constructed.rs
use reinhardt_db::orm::UniqueFieldRef;

struct Article;

fn main() {
    let _ = UniqueFieldRef::<Article, String>::new("title");
}
